2009-04-23  Xavier Queralt Mateu <xqueralt@flumotion.com>

	* configure.ac:
	Back to dev

=== release 0.5.0 ===

2009-04-23  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* configure.ac:
	Releasing 0.5.0 and updating the requirements of flumotion to 0.5.4
	* pkg/ubuntu-intrepid (added):
	* pkg/ubuntu-intrepid/control (added):
	* pkg/ubuntu-intrepid/changelog (added):
	Add a new directory for ubuntu intrepid packages

2009-02-25  Sebastien Merle  <sebastien@fluendo.com>

	* env.in:
	Fixed the environment setup script.

2008-12-03  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	Undoing last commit, wrong fix

2008-12-03  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	Require fluasfmux for wma and wmv encoders.
	Fixes #2774

2008-09-18  Jan Urbanski <jurbanski@flumotion.com>

	* flumotion/component/producers/wms/wms.py
	(WindowsMediaServer.configure_pipeline):
	In the WMS component Use the right medium porter connections. Fixes
	#2335.

2008-09-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	  models lives in flumotion.admin.assistant now

2008-09-01  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	Typo fix, rename f.a.gtk.interfaces to f.a.a.interfaces

2008-08-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* configure.ac:
	* conf (added):
	* conf/Makefile.am (added):
	* conf/examples (added):
	* conf/examples/pull.xml (added):
	* conf/examples/push.xml (added):
	  Adding two example configs.

2008-07-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/wma/wma_wizard.py: